--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body {
     top: 10vh;
     left: 85vw;
     z-index: 4;
-    width: 2.3em;
+    width: 1.8em;
     display: flex;
     flex: 1;
 }
@@ -85,6 +85,7 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    margin: 0.5em 0;
 }
 
 .fa-brands, .fa-solid {
@@ -110,7 +111,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 3em;
+    margin-top: 1em;
 }
 .aboutMeHeader {
     display: flex;
@@ -129,7 +130,7 @@ body {
     margin: 0;
 }
 .aboutMeBlops{
-    margin-top: 3em;
+    margin-top: 1em;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
